devel-20101006
+ remove some redundant header files
+ many bugs in new optimization algorithm fixed

devel-20101004
+ add exp_plus potential
+ sorted potfit.h and added a few comments, read_apot_table -> read_pot_table0
+ differential evolution is now the default optimization algorithm,
	simulated annealing can be used with simann compile option

devel-20101001
+ ADP is now available for tabulated potenials, format 3 or 4
+ [APOT] check potentials for nan
+ added NDEBUG flag, enabling the use of assert's for debugging
+ [APOT] add mishin adp potentials, not quite easy to handle
+ implemented self-adjusting control parameters for diff_evo
+ new stopping criterion for diff_evo, replaced evo_width by evo_threshold

--> POTFIT-20100928 released

trunk-20100928
+ [APOT] fix severe bug with imd potentials

trunk-20100920
+ adjust evo abortion criterion
+ fix force2imd script, is now consistent with potfit config numbering
+ [APOT] adjust ccb potential function to include all parameters
+ the version info is now more precise
+ [vasp2force] remove warning about single atom energy if -e is not given

--> POTFIT-20100812 released

trunk-20100812
+ make endpot optional, is set to ${startpot}_end it not given
+ change i386 profile to i586
+ remove a few commented lines that are not necessary any more
+ set reasonable inital values for starting parameters
+ [APOT] add cbb potential to potfit and makeapot
+ add flagfile interruption to evo and remove unneeded variables
+ remove unneeded header files as well
+ adjust diff_evo parameters

trunk-20100810
+ strip even more (comments)

devel-20100809
+ final commit before next release
+ evolutionary algorithm now restarts if average==best
+ fix Makefile for gcc profiles

devel-20100730
+ more optimization flags for icc and gcc
+ adjust comments to c-style
+ remove openmp
+ Makefile updated
+ [APOT] add support for ACML for analytic functions

devel-20100726
+ strip binaries