@@ -280,16 +280,20 @@ real calc_forces_pair(real *xi_opt, real *forces, int flag)
 	}
 
 	/* energy contributions */
-	forces[energy_p + h] *= eweight / (real)inconf[h];
+	forces[energy_p + h] /= (real)inconf[h];
 	forces[energy_p + h] -= force_0[energy_p + h];
-	tmpsum += conf_weight[h] * SQR(forces[energy_p + h]);
+	tmpsum +=
+	  eweight * conf_weight[h] * 3 * inconf[h] * SQR(forces[energy_p +
+	    h]);
 #ifdef STRESS
 	/* stress contributions */
 	if (uf && us) {
 	  for (i = 0; i < 6; i++) {
-	    forces[stress_p + 6 * h + i] *= sweight / conf_vol[h - firstconf];
+	    forces[stress_p + 6 * h + i] /= conf_vol[h - firstconf];
 	    forces[stress_p + 6 * h + i] -= force_0[stress_p + 6 * h + i];
-	    tmpsum += conf_weight[h] * SQR(forces[stress_p + 6 * h + i]);
+	    tmpsum +=
+	      sweight * conf_weight[h] * inconf[h] / 2 * SQR(forces[stress_p +
+		6 * h + i]);
 	  }
 	}
 #endif /* STRESS */
